added more css..starting my about me section

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
             /*start of my css                         */
 
 h1, h2, h3, p, li{
-    color:ghostwhite;
+    color:rgb(155, 155, 192);
 
 }
 h1 {
@@ -51,21 +51,26 @@ h1 {
     color:darkslategray
  }
 .wrapper {
-max-width: 100%;
+width:100%;
 margin:auto;
 
+}
+h3 {
+display: flex;
+justify-content: center;
 }
 header h2 {
     padding-left: 8%;
     color: darkslategray;
 }
 header {
-    background-color: beige;
+    height:7vh;
+    background-color: rgb(197, 248, 156);
 }
 body {
-    background-image: url(https://romandecoratingproducts.com/wp-content/uploads/2021/01/hang-wallpaper-over-textured-walls-1536x1023.jpg) ;
+    background-color:rgb(245, 245, 239);
     background-repeat: no-repeat;
-    max-width: 100%;
+    width: 100%;
 }
 
 .nav {
@@ -80,13 +85,26 @@ body {
     justify-content: center;
     margin-top:4%;
     margin-bottom: 4%;
-}
-/infoOnMe {
-    display: flex;
-}
-.infoOnMe h2{
-    justify-content: center;
+  }
+  #pictureOfMe{
+      border-radius: 50%;
+  }
 
+.infoOnMe h2{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    color: rgb(251, 132, 255);
+    font-size:xx-large ;
+}
+.infoOnMe h3{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 10%;
+}
+#beExcited{
+    font-size:x-large;
+    color:bisque;
 }
 #aboutPictures{
     display: flex;
