--- a/style.css
+++ b/style.css
@@ -139,6 +139,12 @@ body {
     padding-top: 1%;
     padding-bottom: 1%;
 }
+li {
+    display: flex;
+    justify-content: left;
+    padding-left: 40%;
+    width: 100%;
+}
 /*#beExcited{
     font-size:x-large;
     color:bisque;
@@ -148,37 +154,46 @@ body {
 
 
 
-.picAlign{
-width:100%;
-display:flex;
-justify-content: space around;
-flex-wrap: wrap;
+
+.aboutPictures {
+   width:100%;
+   
+   /* border:5px solid red;*/
 }
-#aboutPictures{
+
+
+
+.pictures {
+  /*  border:1px solid grey;; */
     width:100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
+    justify-content:center;
+    padding:10% 10%;
+    margin:10%;
+
+    
 }
-
-
-
 .pictures img, p{
-    border:1px solid grey;
+   /* border:1px solid grey;*/
     display: flex; 
     width:25%;
     justify-content:center;
-    
+   padding:10% 10% 10% 10%;
+    margin:10%;
+
 }
 .pictures img p{   
    justify-content: center;
     color: midnightblue;
       
 }
-
-li {
+#picParent{
     display: flex;
-    justify-content: left;
-    padding-left: 40%;
-    width: 100%;
+    width:100%;
+}
+#picParent2{
+    display: flex;
+
+}
+#imageOne, #imageTwo, #imageThree, #imageFour {
+    width:100%;
 }
