fixed footer and working on links

--- a/style.css
+++ b/style.css
@@ -183,7 +183,11 @@ li {
 
 
   /*css for the footer*/
-
+.footerBackground img{
+position:absolute;
+background-repeat: no-repeat;
+width: 100%;
+}
   
 
 
